--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -116,7 +116,7 @@ bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
 GameDefaultMap=/Game/RoundLevel.RoundLevel
 ServerDefaultMap=/Engine/Maps/Entry.Entry
-GlobalDefaultGameMode=/Script/Engine.GameModeBase
+GlobalDefaultGameMode=/Script/P2020.RoundGameMode
 GlobalDefaultServerGameMode=None
 
 [/Script/Slate.SlateSettings]
