--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -2,3 +2,13 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=CD175799451E7D40A1A3D6B43A025695
+
+[/Script/P2020.P2020CameraComponent]
+MinCameraOffset=500
+MaxCameraOffset=8000
+FixedCameraAngle=(Pitch=-45,Yaw=-45,Roll=0)
+CameraSpeed=3750
+CameraActiveBorder=20
+MinZoomLevel=0.4
+MiniMapBoundsLimit=0.8
+bShouldClampCamera=true
